@startuml

title __PACMAN-JAVA's Class Diagram__\n

  namespace Controller {
    class Controller.BindingController {
    }
  }
  

  namespace Controller {
    class Controller.EventController {
    }
  }
  

  namespace Modele {
    enum Depl {
    }
  }
  

  namespace Modele {
    abstract class Modele.Entity {
    }
  }
  

  namespace Modele {
    class Modele.Ghost {
    }
  }
  

  namespace Modele {
    class Modele.ModelGrid {
    }
  }
  

  namespace Modele {
    enum ObjDynam {
    }
  }
  

  namespace Modele {
    enum ObjStatic {
    }
  }
  

  namespace Modele {
    class Modele.SimplePacMan {
    }
  }
  

  namespace Vue {
    class Vue.MainVue {
    }
  }
  

  namespace Vue {
    namespace asks {
      class VueTasks.DisplayThread {
      }
    }
  }
  

  namespace Vue {
    namespace asks {
      class VueTasks.EndOfGameTask {
      }
    }
  }
  

  namespace Vue {
    namespace asks {
      class VueTasks.LivesTask {
      }
    }
  }
  

  Controller.EventController o-- Modele.ModelGrid : modelGrid
  Controller.EventController o-- Modele.SimplePacMan : spm
  Modele.Entity o-- Modele.Depl : direction
  Modele.Entity o-- Modele.ModelGrid : modelGrid
  Modele.Ghost -up-|> Modele.Entity
  Modele.ModelGrid .up.|> java.lang.Runnable
  Modele.ModelGrid o-- Modele.SimplePacMan : spm
  Modele.SimplePacMan -up-|> Modele.Entity
  Modele.SimplePacMan o-- Modele.Depl : cachedDirection
  Vue.MainVue -up-|> javafx.application.Application
  VueTasks.DisplayThread -up-|> javafx.concurrent.Task
  VueTasks.DisplayThread o-- Modele.ModelGrid : modelGrid
  VueTasks.EndOfGameTask -up-|> javafx.concurrent.Task
  VueTasks.EndOfGameTask o-- Modele.ModelGrid : modelGrid
  VueTasks.LivesTask -up-|> javafx.concurrent.Task
  VueTasks.LivesTask o-- Modele.SimplePacMan : simplePacMan


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
